# octnet

./: .gitignore
cmake/: FindOctNetCore.cmake
core/: CMakeLists.txt
core/include/octnet/core/: api.h  dense.h
core/include/octnet/cpu/: buffer.h  combine.h  dense.h  pool.h  split.h  unpool.h
core/include/octnet/gpu/: activations.h  buffer.h  col2oc.h  combine.h  conv.h  dense.h  math.h  split.h
core/src/: activations.cu  conv.cc  core.cc  core.cu  io.cc  loss.cu  pool.cu  split.cc  split.cu  volumetric_upsampling.cc
core/test/: test_octree.cc
oc/: OctreeConvolutionMM.lua  OctreeReLU.lua  VisualOC.lua  ffi.lua  init.lua
octnet/: CMakeLists.txt
octnet/include/octnet/core/: conv3x3x3.h  core.h  pool.h  types.h  z_curve.h
octnet/include/octnet/cpu/: activations.h  conv.h  cpu.h  io.h  loss.h  math.h  misc.h  volumetric_upsampling.h
octnet/include/octnet/create/: create.h  utils.h
octnet/include/octnet/gpu/: buffer.h  common.h  gpu.h  loss.h  misc.h  oc2col.h  pool.h  unpool.h  volumetric_upsampling.h
octnet/include/octnet/test/: objects.h
octnet/include/octnet/torch/: cpu.h  gpu.h
octnet/src/core/cpu/: activations.cc  combine.cc  concat.cc  conv.cc  d2o.cc  gridpool.cc  gridunpool.cc  loss.cc  math.cc  misc.cc  o2d.cc  pool.cc
octnet/src/core/gpu/: math.cu  misc.cu
octnet/src/geometry/: geometry.cpp
py/: pyoctnet.pyx  setup.py
pytorch/: build.py  setup.py
pytorch/octnet/src/: func_cpu.h  func_gpu.h  types.h
reproduce/: classification_common.lua  common.lua  create.py  create_data.py  create_from_pc.py  dataloader.lua  on1_mn10_r128.lua  on1_mn10_r16.lua  on1_mn10_r256.lua  on1_mn10_r32.lua  on1_mn10_r64.lua  on1_mn10_r8.lua  on1_mn10_r8.v.lua  on1_mn40_r8.lua  on2_mn10_r128.lua  on2_mn10_r16.lua  on2_mn10_r256.lua  on2_mn10_r32.lua  on2_mn10_r64.lua  on2_mn10_r8.lua  on3_mn10_r128.lua  on3_mn10_r16.lua  on3_mn10_r256.lua  on3_mn10_r32.lua  on3_mn10_r64.lua  on3_mn10_r8.lua  pcloader.lua  rep_train.lua  rep_train2.lua  seg1_a_r32.lua  seg_common.lua  test.lua
